--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "element-ui": "^2.13.2",
+    "sass": "^1.32.6",
+    "sass-loader": "^10.1.1",
     "vue": "^2.6.14"
   },
   "devDependencies": {
