--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "inspect": "vue-cli-service inspect > output.js"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -17,14 +18,17 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
     "babel-plugin-component": "^1.1.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "unplugin-vue-components": "^0.24.1",
     "vue-template-compiler": "^2.6.14",
-    "webpack-bundle-analyzer": "^4.9.0"
+    "webpack": "^4.46.0",
+    "webpack-bundle-analyzer": "^4.9.0",
+    "webpack-cli": "^4.10.0"
   },
   "eslintConfig": {
     "root": true,
