--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "core-js": "^3.8.3",
     "element-ui": "^2.13.2",
     "vue": "^2.6.14",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vuex": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
