--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "element-ui": "^2.13.2",
+    "js-cookie": "^2.2.0",
     "vue": "^2.6.14",
+    "vue-i18n": "^7.8.1",
     "vue-router": "^3.0.2",
     "vuex": "^3.3.0"
   },
